--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: var(--bg, #111);
+      background: var(--bg, #ccc);
     }
     svg {
       width: 300px;
@@ -22,7 +22,7 @@
     }
     #second-hand { stroke: red; stroke-width: 2; }
     #minute-hand { stroke: white; stroke-width: 4; }
-    #hour-hand   { stroke: white; stroke-width: 6; }
+    #hour-hand   { stroke: black; stroke-width: 6; }
     .hour-marker, .minute-marker {
       stroke: #888;
       stroke-width: 2;
